--- a/Meals-Drinks/Modules/MealViewController/View/Cells/MealCategoryCollectionViewCell/CategoriesMealCollectionViewCell.xib
+++ b/Meals-Drinks/Modules/MealViewController/View/Cells/MealCategoryCollectionViewCell/CategoriesMealCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -65,7 +66,7 @@
                 <outlet property="cellImageView" destination="rtp-4X-GM3" id="gJj-pC-VOk"/>
                 <outlet property="cellLabelView" destination="aRC-fj-QCe" id="Cml-8m-n52"/>
             </connections>
-            <point key="canvasLocation" x="-91" y="-1"/>
+            <point key="canvasLocation" x="-91.304347826086968" y="-1.3392857142857142"/>
         </collectionViewCell>
     </objects>
     <resources>
